tests/baselines/reference/tsxGenericAttributesType6.errors.txt
file.tsx(1,1): error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
file.tsx(9,5): error TS2612: Property 'props' will overwrite the base property in 'Component<U, {}>'. If this is intentional, add an initializer. Otherwise, add a 'declare' modifier or remove the redundant declaration.


==== file.tsx (2 errors) ====
    import React = require('react');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
    
    class B1<T extends { x: string } = { x:string } > extends React.Component<T, {}> {
        render() {
            return <div>hi</div>; 
        }
    }
    class B<U> extends React.Component<U, {}> {
        props: U;
        ~~~~~
!!! error TS2612: Property 'props' will overwrite the base property in 'Component<U, {}>'. If this is intentional, add an initializer. Otherwise, add a 'declare' modifier or remove the redundant declaration.
        render() {
            return <B1 {...this.props} x="hi" />;
        }
    }